# vs-dfttest2

./: pyproject.toml
.github/workflows/: linux.yml  wheel.yml
cuda_source/: source.cpp
hip_source/: source.cpp
